[gd_scene load_steps=7 format=3 uid="uid://cpaq00x1cwb65"]

[ext_resource type="Script" path="res://scripts/spawner.gd" id="1_g4fwg"]
[ext_resource type="Texture2D" uid="uid://brlhhnyvnb8" path="res://assets/circle_particle copy.png" id="2_aoppm"]
[ext_resource type="Texture2D" uid="uid://ebwwspwku0ed" path="res://assets/base-color/ufoGreen.png" id="2_w515a"]
[ext_resource type="Texture2D" uid="uid://bn8yikcbcln5n" path="res://assets/kenney_top-down-tanks-redux/PNG/Default size/specialBarrel6_outline.png" id="3_vogab"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pgbyb"]
radius = 36.1248

[sub_resource type="CircleShape2D" id="CircleShape2D_41ypx"]
radius = 540.3

[node name="base" type="StaticBody2D" groups=["base"]]
script = ExtResource("1_g4fwg")

[node name="health_progress_bar" type="TextureProgressBar" parent="."]
offset_left = -42.0
offset_top = -41.0
offset_right = 25.0
offset_bottom = 41.0
scale = Vector2(2.6, 2.6)
value = 100.0
rounded = true
fill_mode = 5
texture_progress = ExtResource("2_aoppm")
tint_progress = Color(0, 1, 0, 1)

[node name="body" type="Sprite2D" parent="."]
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_w515a")

[node name="barrel" type="Node2D" parent="."]

[node name="SpecialBarrel6Outline" type="Sprite2D" parent="barrel"]
position = Vector2(18, 6.39488e-14)
rotation = 1.5708
scale = Vector2(1.25, 2.193)
texture = ExtResource("3_vogab")

[node name="muzzle" type="Marker2D" parent="barrel"]
position = Vector2(54, 6.39488e-14)
rotation = 1.5708
scale = Vector2(1.25, 2.193)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_pgbyb")
metadata/_edit_lock_ = true

[node name="spawn_timer" type="Timer" parent="."]
wait_time = 5.0

[node name="unit_spawn" type="Marker2D" parent="."]
position = Vector2(47, 2)

[node name="RangeArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_41ypx")
metadata/_edit_lock_ = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="body_entered" from="RangeArea" to="." method="_on_range_area_body_entered"]
[connection signal="body_exited" from="RangeArea" to="." method="_on_range_area_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
